# image-processing-algo

./: README.md
Debugger/: CMakeCache.txt  Makefile  cmake_install.cmake  imageBrightness  imageBrightness.cpp
GaussianBlurr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  guassianBlurr  guassianBlurr.cpp
GaussianBlurr/kernal/: sobelEdge
GaussianBlurr/sobelEdge Detection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Histogram equalization/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imageBrightness  imageBrightness.cpp
Loading Image/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  loadImage  loadImage.cpp
Marr-Hildreth Edge Detector/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gussainfiltering  gussainfiltering.cpp
Normalized Blur/: Blur  Blur.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
convolutionBlur/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convolutionBlur  convolutionBlur.cpp  record.txt
multithreading historgram/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  histogram  histogram.cpp
sobelEdge Detection/: sobelEdge.cpp
sobelTransform_Gx/: CMakeCache.txt  Makefile  cmake_install.cmake  sobelTransform  sobelTransform.cpp
sobelTransform_Gy/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sobelTransform  sobelTransform.cpp
