cmake_minimum_required(VERSION 2.8)
project( sobelTransform.cpp )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( sobelTransform sobelTransform.cpp )
target_link_libraries( sobelTransform ${OpenCV_LIBS} )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
